# uf2-daisy

./: .clang-format  CMakeLists.txt  README.md  README_OLD.md  STM32H750IB_FLASH.ld
cmake/: ArmGNUToolchain.cmake  LLVMEmbeddedToolchainForArm.cmake  stm32h750xx.cmake
extra/: syscalls.c
include/: IS25LP064A.h  app_azure_rtos.h  app_azure_rtos_config.h  gpio.h  main.h  qspi.h  stm32h7xx_it.h  tx_user.h  usb_otg.h  util.h
rtos/: CMakeLists.txt
rtos/ThreadX/App/: app_threadx.c  app_threadx.h
rtos/USBX/App/: app_usbx_device.c  app_usbx_device.h  ux_device_descriptors.c  ux_device_descriptors.h  ux_device_msc.c  ux_device_msc.h
src/: app_azure_rtos.c  gpio.c  main.c  qspi.c  startup_stm32h750xx.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  usb_otg.c
src/ThreadX/: app_threadx.c  app_threadx.h
src/USBX/: app_usbx_device.c  app_usbx_device.h  ux_device_descriptors.c  ux_device_descriptors.h  ux_device_dfu_media.c  ux_device_dfu_media.h  ux_device_msc.c  ux_user.h
src/boards/: boards.c  boards.h
src/boards/seed/: board.h
src/uf2/: .clang-format  ghostfat.c  uf2.h  uf2cfg.h
